[package]
name = "tile-image-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
glob = "0.3.0"
futures = "0.3.21"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"