[package]
name = "tileview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
futures = "0.3.21"
clap = { version = "4.3.0", features = ["derive"] }
lazy_static = "1.4.0"
tileproc = { git = "https://github.com/sloganking/tile-processor", branch = "master" }
tempdir = "0.3.7"
image = "0.24.6"
